Develop/assets/css/style.css
:root {
    --lightblue:rgba(0, 225, 255, 0.918);
    --db:rgb(55, 53, 64);
  }


* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}



.header {
    font-family:Arial, Helvetica, sans-serif;
    background-color: var(--db);
    padding: 20px;
    color:black;
}

header h1 {
    font-size: 50px;
    display: inline-block;
    background-color:var(--lightblue);
    padding-left: 200px;
    padding-right: 30px;
    border-radius: 10px;
}


header nav {
    float:right;
    margin-right: 150px;
    padding-top: 15px;
}

header nav li {
    display: inline-block;

}

header nav li a {
    font-size: 25px;
    color:var(--lightblue);
    padding: 10px;
    text-underline-offset: 10px;
}

.topimage {
    height:200px;
    width: 100%;
    background-image: url(../images/vector-winter-horizontal-landscape-with-snow-capped-hills-and-triangle-coniferous-trees-cartoon-illustration.webp);
    background-size: cover;
    background-position: center;
}

main {
    display:flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    align-items: left;
}

.aboutme {
    display:flex;
    flex:1;
    margin-top: 50px;
    margin-right: 15%;
    margin-left: 15%;
    margin-bottom: 5%;
}


.aboutme h2 {
    font-size: 50px;
    color: var(--db);
    border-right: 4px solid var(--db);
    padding-right: 2%;
    text-align: right;
}

.aboutme p {  
   padding-left: 30px;
   font-size: 25px;
   padding-top: 10px;
}

.work {
    display:flex;
    flex:1;
    margin-right: 15%;
    margin-left: 15%;
    margin-bottom: 5%;
}

.work h2 {
    font-size: 50px;
    color: var(--db);
    border-right: 4px solid var(--db);
    padding-right: 2%;
    text-align: right;
}

.contentboxes {
    display:flex;
    flex-wrap:wrap;
    padding-left:100px;
    flex-grow: 1;
}
a img {
    width: 700px;
    height: 700px;
    background-color: var(--lightblue);
    padding: 10px;
    margin: 10px;
}

a img:hover {
    opacity: 0.5;
}


.overlay1 {
    position:absolute;
    bottom: 0;
    background-color: var(--lightblue);
    font-size: 50px;
    margin-left: 20px;
    color: var(--db);
}

.overlay2 {
    position:absolute;
    bottom: 0;
    background-color: var(--lightblue);
    font-size: 50px;
    margin-left: 20px;
    color: var(--db);
}

footer {
    font-size: 30px;
    color: var(--db);
    padding-right: 2%;
    margin-left: 12.8%;
    margin-bottom: 3%;
    
}

footer h2 {
    border-right: 4px solid var(--db);
    margin-right: 90%;
}


footer li {
    display: inline-block;
    margin-left: 20%;
    text-decoration: underline;
    color: var(--db);
    text-underline-offset: 10px;
    text-decoration-color:var(--lightblue);
}

